--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,6 @@ footer>p{
 .serie {
     margin: 2%;
     display: flex;
-    flex-direction: row;
     height: 80%;
 
 
@@ -94,6 +93,28 @@ footer>p{
     margin: 0;
     height: 80%;
     overflow: scroll;
+}
+
+.serie,.season{
+    cursor: pointer;
+    border-radius: 12px;
+
+    transition: background-color 0.5s 5ms;
+}
+
+.list>*{
+    flex-direction: row;
+}
+.list>*:nth-child(odd){
+    flex-direction: row;
+}
+.list>*:nth-child(even){
+    flex-direction: row-reverse;
+}
+
+.serie:hover,#season:hover{
+    background-color: #A91079;
+
 }
 
 @media (min-width:1000px) {
