Les saisons ne sont plus afficher 1 fois sur 2 a droite

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,13 +102,11 @@ footer>p{
     transition: background-color 0.5s 5ms;
 }
 
-.list>*{
+
+#list__serie>*:nth-child(odd){
     flex-direction: row;
 }
-.list>*:nth-child(odd){
-    flex-direction: row;
-}
-.list>*:nth-child(even){
+#list__serie>*:nth-child(even){
     flex-direction: row-reverse;
 }
 
