--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,9 +73,13 @@ footer>p{
 .serie {
     margin: 2%;
     display: flex;
-    height: 80%;
+    height: 82%;
 
 
+}
+
+img{
+    border-radius: 12px;
 }
 .serie__image {
     margin: 1%;
@@ -91,7 +95,7 @@ footer>p{
 
 .serie__txt>p{
     margin: 0;
-    height: 80%;
+    height: 82%;
     overflow: scroll;
 }
 
@@ -113,6 +117,22 @@ footer>p{
 .serie:hover,#season:hover{
     background-color: #A91079;
 
+}
+
+.serie__pres{
+    display: flex;
+    margin: 2%;
+    height: 82%;
+}
+
+.serie__txt__nom{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.serie__txt__nom>p{
+    overflow: scroll;
 }
 
 @media (min-width:1000px) {
