--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,34 +19,31 @@ body{
 a{
     color: white;
     text-decoration: none;
-    transition: color 1s 5ms;
+
 
 }
 a:checked{
     color: white;
 }
 
-a:hover{
-    color: #F806CC;
-}
+
 .header{
-    margin: 1%;
+    margin: 0.5%;
     width: 90%;
     border: solid #A91079 1px;
     border-radius: 12px;
     background-color: #A91079;
     text-align: center;
-    height: 9%;
+    height: 8%;
 }
 
 header>h1{
     margin: 0;
     font-size: x-large;
     text-align: center;
-    padding-top: 1vh;
 }
 .footer {
-    margin: 1%;
+    margin: 0.5%;
     border: solid #A91079 1px;
     border-radius: 12px;
     background-color: #A91079;
@@ -65,10 +62,17 @@ footer>p{
     border: solid #A91079 1px;
     border-radius: 12px;
     margin: 1%;
-    height: 73vh;
+    height: 72vh;
+}
+
+#list__serie{
+    height: 78vh;
 }
 .content{
     width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .serie {
     margin: 2%;
@@ -135,9 +139,31 @@ img{
     overflow: scroll;
 }
 
+.btn__home{
+    margin-top:0.5%;
+    padding:0.5%;
+    cursor: pointer ;
+    border-radius: 12px;
+    border: #F806CC solid 1px;
+    transition: background-color 1s 5ms;
+
+}
+
+.btn__home>p{
+    margin: 0;
+
+}
+
+.btn__home:hover{
+    background-color: #F806CC;
+}
+
 @media (min-width:1000px) {
     .footer{
         margin: 0;
+    }
+    .list{
+        margin: 0.5%;
     }
 }
 
@@ -158,4 +184,5 @@ img{
         padding-top: 1.5vh;
 
     }
+
 }
