--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,17 @@ body{
     padding: .20em;
     align-items: center;
     background-color: #2E0249;
+
+}
+
+/*Pour cacher la bar de défilment*/
+p,.list{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll;
+}
+p::-webkit-scrollbar,.list::-webkit-scrollbar {
+    display: none;
 }
 
 a{
@@ -241,4 +252,42 @@ img{
 
     }
 
+}
+
+/*--------------- Admin ---------------------*/
+
+.admin__btn__container{
+    display: flex;
+    gap: 5em;
+}
+
+main{
+    align-items: center;
+    display: flex;
+    height: 30%;
+    align-items: center;
+}
+
+.header__admin{
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.admin__btn{
+    border: #A91079 solid 1px;
+    border-radius: 30px;
+    width: 35%;
+    cursor: pointer;
+    transition: background-color 1s 5ms;
+
+}
+.admin__btn:hover{
+    background-color: #F806CC;
+}
+
+
+.admin__btn>h3{
+    margin: 1em;
 }
