--- a/public/css/style.css
+++ b/public/css/style.css
@@ -282,7 +282,7 @@ main{
     text-align: center;
     border: #A91079 solid 1px;
     border-radius: 30px;
-    width: 15%;
+    width: fit-content;
     cursor: pointer;
     transition: background-color 1s 5ms;
 
@@ -300,8 +300,34 @@ main{
     margin: 0.5em;
 }
 
-@media (max-width: 800px) {
-    .admin__btn{
-        width: 60%;
-    }
+.form{
+    margin-top: 1%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
+
+input[type=text]{
+    all: unset;
+    border: #A91079 solid 1px;
+    background-color: white;
+    border-radius: 8px;
+    height: 50%;
+    color: black;
+}
+
+.form__button{
+    color: white;
+    border: #A91079 solid 1px;
+    text-align: center;
+    border-radius: 12px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    cursor: pointer;
+    transition: background-color 1s 5ms;
+    background-color: #2E0249;
+}
+.form__button:hover{
+    background-color: #F806CC;
+}
+
